# 3d-render-examples

./: .gitignore  CMakeLists.txt
cmake/: compileShaders.cmake  find_vulkan.cmake
examples/: CMakeLists.txt  common.cpp  common.h
examples/basic/: main.cpp
examples/common/: Model.cpp  Model.h
examples/common/shaders/glsl-v/: gltf.frag  gltf.vert
examples/just_attributes/: main.cpp
examples/model/: main.cpp
examples/texture/: main.cpp
examples/uniform_buffer/: main.cpp
include/: RenderInterface.h  keycodes.h
source/: CMakeLists.txt  GuiInterface.h  RenderInterface.cpp  WindowInterface.h  common.cpp  common.h
source/glfw_window_impl/: GLFWWindowImpl.cpp  GLFWWindowImpl.h
source/imgui_impl/: IGGuiImpl.cpp  IGGuiImpl.h
source/opengl_impl/: OGLBuffer.cpp  OGLBuffer.h  OGLCommandRecorder.cpp  OGLCommandRecorder.h  OGLDebug.h  OGLDescriptors.cpp  OGLDescriptors.h  OGLFrameBuffer.cpp  OGLFrameBuffer.h  OGLPipeline.cpp  OGLPipeline.h  OGLRenderImpl.cpp  OGLRenderImpl.h  OGLRenderJob.cpp  OGLRenderJob.h  OGLSampler.cpp  OGLSampler.h  OGLShaderManager.cpp  OGLShaderManager.h  OGLTexture.cpp  OGLTexture.h
source/vulkan_impl/: RenderJob.cpp  RenderJob.h  VulkanCommand.cpp  VulkanCommand.h  VulkanCommandRecorder.cpp  VulkanCommandRecorder.h  VulkanDescriptorManager.cpp  VulkanDescriptorManager.h  VulkanDevice.cpp  VulkanDevice.h  VulkanMemoryManagaer.cpp  VulkanMemoryManagaer.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQueueManager.cpp  VulkanQueueManager.h  VulkanRenderImpl.cpp  VulkanRenderImpl.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShaderManager.cpp  VulkanShaderManager.h  VulkanSwapChain.cpp  VulkanSwapChain.h
source/vulkan_impl/util/: UniversalContainer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanInitializers.h  macro.h
